finished buidling association

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ block content
       br
       input.btn(class="btn btn-lg btn-primary btn-block", type="submit", value="Log In")
       br
-      button(class="btn btn-lg btn-primary btn-block signin-form", id='signup-button') Sign Up
+      button(class="btn btn-lg btn-primary btn-block", id='signup-button') Sign Up
 
     form(class="signup-form", method="post", action="/users/create")
       h2(class="form-signin-heading") Let's sign up
@@ -23,4 +23,4 @@ block content
       br
       input.btn(class="btn btn-lg btn-primary btn-block", type="submit", value="Sign Up")
       br
-      button(class="btn btn-lg btn-primary btn-block signup-form", id='signin-button') I have an account already
+      button(class="btn btn-lg btn-primary btn-block", id='signin-button') I have an account already
