create admin routes and question routes

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
 
-      a(class="btn btn-lg btn-primary btn-block", id='login', href="/admins/login") I have an account already
+      a(class="btn btn-lg btn-primary btn-block", id='login', href="/login") I am admin
