--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js')
     script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
-    script(src='/javascripts/index.js')
+    script(src='/javascripts/login.js')
+    script(src='/javascripts/question-form.js')
   body
     block content
