--- a/views/admin/dashboard.jade
+++ b/views/admin/dashboard.jade
@@ -1,8 +1,11 @@
-extends layout
+extends ../layout
 
 block content
 
     h1 Dashboard
+    a(class="btn btn-lg btn-warning", id='logout', href="/admins/logout") Logout
+    br
+    br
     a(class="btn btn-lg btn-primary", id='addQuestion', href="/questions/new") Add a question
     br
     br
