--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -11,4 +11,4 @@ block content
           br
           button(type="submit", class="btn btn-primary") Submit
 
-      a(class="btn btn-lg btn-primary btn-block", id='login', href="/login") I am admin
+      a(class="btn btn-lg btn-primary btn-block", id='login', href="/login") Admin
