--- a/views/question/question_success.jade
+++ b/views/question/question_success.jade
@@ -3,10 +3,13 @@ extends ../layout
 block content
 
   form(class="form-group")
-    h1 #{question.content}
+    font(color="white", size="6px", face="Impact, Charcoal, sans-serif") #{question.content}
+    br
+    br
     select(name="answer" class="form-control")
       each answer in answers
         option(value="#{answer.id}") #{answer.content}
     br
 
-  a(class="btn btn-info", href="/admins") Dashboard
+  form(action="/admins", method="get")
+    button(class="btn btn-lg btn-secondary") Dashboard
