--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,12 +6,18 @@ html
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js')
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
+
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.min.js')
     script(src='/javascripts/question-form.js')
     script(src='/javascripts/login.js')
+    script(src='/javascripts/display-result.js')
+
   body
-    h1 SurveySite
+    div #[font(color="white", size="100px", face="Impact, Charcoal, sans-serif") SurveySite]
     br
     br
-    if admin
-      h1 Log in as #{admin.email}
+    if !admin
+      form(action="/login", method="get")
+        button(class="btn btn-md btn-secondary pull-right") Admin
+
     block content
