--- a/views/question/new_question.jade
+++ b/views/question/new_question.jade
@@ -6,12 +6,15 @@ block content
       h1= error
 
     form(id="question-form", method="post", action="/questions/create")
-      h2(class="form-signin-heading") Add a new question
+      font(color="white", size="6px", face="Impact, Charcoal, sans-serif") Add a new question
+      br
+      br
       input.span3(class="form-control", type="text", name="question", placeholder="What do you want to ask?", required)
       div(id="answer-fields")
         input.span3(class="form-control", type="text", name="answers", placeholder="Option", required)
         input.span3(class="form-control", type="text", name="answers", placeholder="Option", required)
       br
-      button(class="btn btn-md btn-primary btn-block", id="add-answer-button") Add Answer
+      button(type="#", class="btn btn-lg btn-secondary", id="add-answer-button") Add Answer
       br
-      input.btn(class="btn btn-lg btn-primary btn-block", type="submit", value="Create This Question")
+      br
+      input.btn(class="btn btn-lg btn-secondary btn-block", type="submit", value="Create This Question")
