--- a/views/question/new_question.jade
+++ b/views/question/new_question.jade
@@ -5,6 +5,9 @@ block content
     if error
       h1= error
 
+    form(action="/admins", method="get")
+      button(class="btn btn-lg btn-secondary pull-right") Dashboard
+    br
     form(id="question-form", method="post", action="/questions/create")
       font(color="white", size="6px", face="Impact, Charcoal, sans-serif") Add a new question
       br
