--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -16,7 +16,7 @@ block content
           button(type="submit", class="btn btn-outline-secondary") Submit
 
       br
-
-      div(id="RomboGif")
-        img(src="http://67.media.tumblr.com/913fb1bf49afdf046face0b863662445/tumblr_mugq9xgSX31s5hedko1_1280.gif",alt="HTML5 Icon", style="width:380px;height:200px;")
-        h3(id="caption") #[font(color="white") You can do it!!!]
+      br
+      br
+      img(src="http://67.media.tumblr.com/913fb1bf49afdf046face0b863662445/tumblr_mugq9xgSX31s5hedko1_1280.gif",alt="HTML5 Icon")
+      h3(id="caption") #[font(color="white", size="20", face="Impact, Charcoal, sans-serif") You can do it!!!]
