--- a/views/admin/dashboard.jade
+++ b/views/admin/dashboard.jade
@@ -2,13 +2,13 @@ extends ../layout
 
 block content
 
-    div #[font(color="white", size="7", face="Impact, Charcoal, sans-serif") Dashboard]
+    div #[font(color="white", size="6", face="Impact, Charcoal, sans-serif") Dashboard]
     br
-    a(class="btn btn-lg btn-warning", id='logout', href="/admins/logout") Logout
+    a(class="btn btn-md btn-warning", id='logout', href="/admins/logout") Logout
     br
     br
     form(action="/questions/new", method="get")
-      button(class="btn btn-md btn-secondary") Add a question
+      button(class="btn btn-md btn-secondary", , href="/questions/new") Add a question
     br
     br
     if (questions[0])
