--- a/views/home/login.jade
+++ b/views/home/login.jade
@@ -10,9 +10,10 @@ block content
       input.span3(class="form-control", type="password", name="password", placeholder="Password", required)
       input.span3(class="form-control", type="password", name="comfirmedPassword", placeholder="Confirm password", required)
       br
-      input.btn(class="btn-lg btn btn-outline-secondary btn-block", type="submit", value="Sign Up")
+      input.btn(class="btn-lg btn btn-info btn-block", type="submit", value="Sign Up")
       br
-      button(class="btn-lg btn btn-outline-secondary btn-block", id='signin-button') I have an account already
+
+    button(class="btn-lg btn btn-info btn-block signup-form", id='signin-button') I have an account already
 
     form(class="signin-form", method="post", action="/admins/login")
       div #[font(color="white", face="Impact, Charcoal, sans-serif", size="6px") Please sign in]
@@ -20,6 +21,7 @@ block content
       input.span3(class="form-control", type="text", name="email", placeholder="Enter your email", required)
       input.span3(class="form-control", type="password", name="password", placeholder="Password", required)
       br
-      input.btn(class="btn-lg btn btn-outline-secondary btn-block", type="submit", value="Log In")
+      input.btn(class="btn-lg btn btn-info btn-block", type="submit", value="Log In")
       br
-      button(class="btn-lg btn btn-outline-secondary btn-block", id='signup-button') Sign Up
+
+    button(class="btn-lg btn btn-info btn-block signin-form", id='signup-button') Sign Up
