--- a/views/question/question_success.jade
+++ b/views/question/question_success.jade
@@ -11,5 +11,4 @@ block content
         option(value="#{answer.id}") #{answer.content}
     br
 
-  form(action="/admins", method="get")
-    button(class="btn btn-lg btn-secondary") Dashboard
+  a(class="class="btn btn-md btn-info", href="/admins") Dashboard
