--- a/views/question/question_success.jade
+++ b/views/question/question_success.jade
@@ -11,4 +11,4 @@ block content
         option(value="#{answer.id}") #{answer.content}
     br
 
-  a(class="class="btn btn-md btn-info", href="/admins") Dashboard
+  a(class="btn btn-md btn-info", href="/admins") Dashboard
