--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -16,10 +16,10 @@ block content
               option(value="#{answer.id}") #{answer.content}
           input(type="hidden", value="#{userId}", name="userId")
           br
-          button(type="submit", class="btn-info") Submit
+          button(type="submit", class="btn btn-info") Submit
 
       br
       br
       br
       img(src="http://67.media.tumblr.com/913fb1bf49afdf046face0b863662445/tumblr_mugq9xgSX31s5hedko1_1280.gif",alt="HTML5 Icon")
-      h3(id="caption") #[font(color="white", size="20", face="Impact, Charcoal, sans-serif") You can do it!!!]
+      h3(id="caption") #[font(color="white", size="4", face="Impact, Charcoal, sans-serif") You can do it!!!]
